--- a/index.html
+++ b/index.html
@@ -68,6 +68,15 @@
                         <a href="https://peshk0v.github.io/biolKvantPro/" class="btn"><i class="fas fa-eye"></i> Сайт</a>
                     </div>
                 </div>
+
+                <div class="project-card">
+                    <img src="https://cdn.javarush.com/images/article/7b1c59b6-5da7-4091-932c-c9982f0b5014/512.jpeg" alt="Химический гид" class="project-image">
+                    <h3>Химический гид</h3>
+                    <p>Интерактивная платформа для изучения химии с тестами и структурированной информацией</p>
+                    <div class="project-links">
+                        <a href="https://peshk0v.github.io/biolKvantPro/" class="btn"><i class="fas fa-eye"></i> Сайт</a>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
