--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
         </div>
 
         <div class="hero-content">
-            <h1>Привет!<br>Я FrontEnd Алхимик</h1>
-            <p class="tagline">Превращаю кофе в цифровые шедевры. <br>Люблю сложные задачи и красивые анимации.</p>
+            <h1>Привет!<br>Я начинающий FrontEnd разработчик!</h1>
+            <p class="tagline">Стараюсь научиться всему! <br>Люблю сложные задачи и красивые анимации.</p>
             <div class="tech-stack">
               <div class="tech-item">
                   <img src="https://cdn-icons-png.flaticon.com/512/5968/5968350.png" alt="Python">
@@ -70,11 +70,11 @@
                 </div>
 
                 <div class="project-card">
-                    <img src="https://cdn.javarush.com/images/article/7b1c59b6-5da7-4091-932c-c9982f0b5014/512.jpeg" alt="Химический гид" class="project-image">
-                    <h3>Химический гид</h3>
-                    <p>Интерактивная платформа для изучения химии с тестами и структурированной информацией</p>
+                    <img src="https://peshk0v.github.io/peshkv/IPYR/background.png" alt="Хоррор игра" class="project-image">
+                    <h3>Ill Paint You Red</h3>
+                    <p>Визуальная новелла в жанре Horror.</p>
                     <div class="project-links">
-                        <a href="https://peshk0v.github.io/biolKvantPro/" class="btn"><i class="fas fa-eye"></i> Сайт</a>
+                        <a href="https://peshk0v.github.io/peshkv/IPYR/" class="btn"><i class="fas fa-eye"></i> Сайт</a>
                     </div>
                 </div>
             </div>
