--- a/IPYR/index.html
+++ b/IPYR/index.html
@@ -33,13 +33,13 @@
     <div id="popup" class="popup">
         <div class="popup-content">
             <h2>Выберите платформу</h2>
-            <a href="download/windows" class="popup-button">
+            <a href="download/windows.html" class="popup-button">
                 <i class="fab fa-windows"></i> Windows
             </a>
-            <a href="download/linux" class="popup-button">
+            <a href="download/linux.html" class="popup-button">
                 <i class="fab fa-linux"></i> Linux
             </a>
-            <a href="download/android" class="popup-button">
+            <a href="download/android.html" class="popup-button">
                 <i class="fab fa-android"></i> Android
             </a>
             <button class="close-button" onclick="closePopup()">Закрыть</button>
