--- a/IPYR/download/windows.html
+++ b/IPYR/download/windows.html
@@ -10,7 +10,7 @@
     <div class="error-container">
         <h1>ОШИБКА 404</h1>
         <p>К сожалению, запрашиваемая страница не найдена.</p>
-        <a href="https://peshk0v.github.io/TG-PSHKV-LifeStyle/" class="back-home">Вернуться на главную</a> 
+        <a href="https://peshk0v.github.io/peshkv/IPYR/" class="back-home">Вернуться на главную</a> 
     </div>
 </body>
 </html>
