--- a/index.html
+++ b/index.html
@@ -46,45 +46,15 @@
     <section id="projects" class="projects">
         <div class="container">
             <h2>Последние проекты</h2>
-            
-            <div class="projects-grid">
-                <!-- Проект 1 -->
-                <div class="project-card">
-                    <img src="https://github.com/peshk0v/SakuraLauncher/raw/main/web/img/Icon.png?raw=true" alt="SakuraLauncher" class="project-image">
-                    <h3>SakuraLauncher</h3>
-                    <p>Современный лаунчер для Minecraft с анимированным интерфейсом и системой модов</p>
-                    <div class="project-links">
-                        <a href="https://github.com/peshk0v/SakuraLauncher" class="btn"><i class="fab fa-github"></i> Код</a>
-                        <a href="https://peshk0v.github.io/SakuraWebsite/" class="btn"><i class="fas fa-eye"></i> Сайт</a>
-                    </div>
-                </div>
-
-                <!-- Проект 2 -->
-                <div class="project-card">
-                    <img src="https://cdn.javarush.com/images/article/7b1c59b6-5da7-4091-932c-c9982f0b5014/512.jpeg" alt="Химический гид" class="project-image">
-                    <h3>Химический гид</h3>
-                    <p>Интерактивная платформа для изучения химии с тестами и структурированной информацией</p>
-                    <div class="project-links">
-                        <a href="https://peshk0v.github.io/biolKvantPro/" class="btn"><i class="fas fa-eye"></i> Сайт</a>
-                    </div>
-                </div>
-
-                <div class="project-card">
-                    <img src="https://peshk0v.github.io/peshkv/IPYR/background.png" alt="Хоррор игра" class="project-image">
-                    <h3>Ill Paint You Red</h3>
-                    <p>Визуальная новелла в жанре Horror.</p>
-                    <div class="project-links">
-                        <a href="https://peshk0v.github.io/peshkv/IPYR/" class="btn"><i class="fas fa-eye"></i> Сайт</a>
-                    </div>
-                </div>
-            </div>
+            <p>Все мои проекты вы можете найти на сайте <b>peshkv.online</b>.</p>
+            <a href="https://peshkv.online" class="btn btn-primary" target="_blank">Перейти на сайт</a>
         </div>
     </section>
 
     <footer class="footer">
       <div class="container">
           <div class="footer-content">
-              <p class="footer-text">Свяжитесь со мной: <a href="mailto:peshkv@proton.me">peshkv@proton.me</a></p>
+              <p class="footer-text">Свяжитесь со мной: <a href="mailto:dev@peshkv.ru">dev@peshkv.ru</a></p>
               <div class="social-links">
                   <a href="https://t.me/pshlst" class="btn" target="_blank">
                       <i class="fab fa-telegram"></i> Мой Telegram канал
