--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         </div>
 
         <div class="hero-content">
-            <h1>Привет!<br>Я начинающий FrontEnd разработчик!</h1>
+            <h1>Привет!<br>Я начинающий разработчик!</h1>
             <p class="tagline">Стараюсь научиться всему! <br>Люблю сложные задачи и красивые анимации.</p>
             <div class="tech-stack">
               <div class="tech-item">
