--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                   <span>CSS3</span>
               </div>
               <div class="tech-item">
-                  <img src="https://cdn-icons-png.flaticon.com/512/5968/5968672.png" alt="Bash">
+                  <img width="64" height="64" src="https://img.icons8.com/fluency/48/bash.png" alt="bash"/>
                   <span>Bash</span>
               </div>
           </div>
@@ -54,7 +54,7 @@
     <footer class="footer">
       <div class="container">
           <div class="footer-content">
-              <p class="footer-text">Свяжитесь со мной: <a href="mailto:dev@peshkv.ru">dev@peshkv.ru</a></p>
+              <p class="footer-text">Свяжитесь со мной: <a href="mailto:git@peshkv.ru">git@peshkv.ru</a></p>
               <div class="social-links">
                   <a href="https://t.me/pshlst" class="btn" target="_blank">
                       <i class="fab fa-telegram"></i> Мой Telegram канал
